--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^3.3.2",
     "browserify": "^9.0.3",
+    "browserify-middleware": "^5.0.2",
     "express": "^4.12.2",
     "jquery": "^2.1.3",
     "less-middleware": "^2.0.1",
