--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^2.1.3",
     "less-middleware": "^2.0.1",
     "react": "^0.13.0",
+    "react-tools": "0.13.1",
     "react-bootstrap": "^0.17.0"
   }
 }
