--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-bootstrap": "^0.17.0",
     "react-router": "^0.13.2",
     "watchify": "^2.6.0"
+  },
+  "devDependencies": {
+    "node-notifier": "^4.1.2"
   }
 }
