--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "dev": "node server/dev.js"
   },
   "dependencies": {
-    "babelify": "^5.0.4",
     "bootstrap": "^3.3.2",
-    "browserify": "^9.0.3",
     "express": "^4.12.2",
     "jquery": "^2.1.3",
-    "less-middleware": "^2.0.1",
     "react": "^0.13.0",
     "react-bootstrap": "^0.17.0",
-    "react-router": "^0.13.2",
-    "watchify": "^2.6.0"
+    "react-router": "^0.13.2"
   },
   "devDependencies": {
-    "node-notifier": "^4.1.2"
+    "babelify": "^5.0.4",
+    "browserify": "^9.0.3",
+    "casperjs": "^1.1.0-beta3",
+    "less-middleware": "^2.0.1",
+    "mocha": "^2.2.1",
+    "node-notifier": "^4.1.2",
+    "sinon": "^1.14.1",
+    "watchify": "^2.6.0"
   }
 }
