improves mocha options

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "start": "node server/start.js",
     "dev": "node server/dev.js",
     "build": "node server/package.js",
-    "test": "./node_modules/.bin/mocha --bail --recursive --compilers js:babel/register src/test/unit src/test/ui",
-    "test-unit": "./node_modules/.bin/mocha --bail --recursive --compilers js:babel/register src/test/unit",
-    "test-ui": "./node_modules/.bin/mocha --bail --recursive --compilers js:babel/register src/test/ui"
+    "test": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit src/test/ui",
+    "test-unit": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit",
+    "test-ui": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/ui"
   },
   "dependencies": {
     "bootstrap": "^3.3.2",
