--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jquery": "^2.1.3",
     "react": "^0.13.0",
     "react-bootstrap": "^0.17.0",
-    "react-router": "^0.13.2"
+    "react-router": "^0.13.2",
+    "react-intl":"^1.2.0"
   },
   "devDependencies": {
     "babel": "^5.1.8",
