--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   "scripts": {
     "start": "node server/start.js",
     "dev": "node server/dev.js",
+    "testWww": "node server/testWww.js",
     "build": "node server/package.js",
     "test": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit src/test/ui",
     "test-unit": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit",
     "test-ui": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/ui"
   },
   "dependencies": {
+    "react-intl":"^1.2.0",
     "bootstrap": "^3.3.2",
     "express": "^4.12.2",
     "jquery": "^2.1.3",
     "react": "^0.13.0",
     "react-bootstrap": "^0.17.0",
-    "react-router": "^0.13.3",
-    "react-intl":"^1.2.0"
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel": "^5.1.8",
@@ -33,6 +34,6 @@
     "should": "^5.2.0",
     "sinon": "^1.14.1",
     "watchify": "^2.6.0",
-    "zombie": "^4.0.7"
+    "zombie": "^4.0.10"
   }
 }
