moves server folder to src

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "url": "https://github.com/HeroesDesk/heroesdesk-front-web"
   },
   "scripts": {
-    "start": "node server/start.js",
-    "dev": "node server/dev.js",
-    "testWww": "node server/testWww.js",
-    "build": "node server/package.js",
+    "start": "node src/server/start.js",
+    "dev": "node src/server/dev.js",
+    "testSite": "node src/server/testSite.js",
+    "build": "node src/server/package.js",
     "test": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit src/test/ui",
     "test-unit": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/unit",
     "test-ui": "./node_modules/.bin/mocha --check-leaks --throw-deprecation --growl --bail --recursive --compilers js:babel/register src/test/ui"
