--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.12.2",
     "jquery": "^2.1.3",
     "react": "^0.13.0",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "react-bootstrap": "^0.23.1",
+    "react-router-bootstrap": "^0.16.0"
   },
   "devDependencies": {
     "babel": "^5.1.8",
