--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "should": "^5.2.0",
     "sinon": "^1.14.1",
     "watchify": "^2.6.0",
-    "zombie": "^4.0.10"
+    "zombie": "^4.0.10",
+    "react-intl": "^1.2.0"
   }
 }
