--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^0.13.0",
     "react-router": "^0.13.3",
     "react-bootstrap": "^0.23.1",
-    "react-router-bootstrap": "^0.16.0"
+    "react-router-bootstrap": "^0.16.0",
+    "node-uuid": "^1.4.3"
   },
   "devDependencies": {
     "babel": "^5.1.8",
