--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "react-router": "^0.13.3",
     "react-bootstrap": "^0.23.1",
     "react-router-bootstrap": "^0.16.0",
-    "node-uuid": "^1.4.3"
+    "node-uuid": "^1.4.3",
+    "redux" : "^0.12.0"
   },
   "devDependencies": {
-    "babel": "^5.1.8",
+    "babel": "^5.6.5",
     "babelify": "^5.0.4",
     "browserify": "^9.0.3",
     "less": "^2.4.0",
