--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^0.23.1",
     "react-router-bootstrap": "^0.16.0",
     "node-uuid": "^1.4.3",
+    "immutable":"^3.7.4",
     "redux" : "^0.12.0"
   },
   "devDependencies": {
@@ -34,7 +35,6 @@
     "node-lessify": "0.0.10",
     "node-notifier": "^4.1.2",
     "should": "^5.2.0",
-    "sinon": "^1.14.1",
     "watchify": "^2.6.0",
     "zombie": "4.0.10",
     "react-intl": "^1.2.0"
