--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.2",
+    "cqrsjs": "git+https://github.com/o-schneider/cqrsjs.git",
     "express": "^4.12.2",
+    "immutable": "^3.7.4",
     "jquery": "^2.1.3",
-    "react": "^0.13.0",
-    "react-router": "^0.13.3",
-    "react-bootstrap": "^0.23.1",
-    "react-router-bootstrap": "^0.16.0",
+    "lodash": "^3.10.0",
     "node-uuid": "^1.4.3",
-    "immutable":"^3.7.4",
-    "redux" : "^0.12.0",
-    "lodash" : "^3.10.0"
+    "react": "^0.13.0",
+    "react-bootstrap": "^0.23.1",
+    "react-router": "^0.13.3",
+    "react-router-bootstrap": "^0.16.0",
+    "redux": "^0.12.0"
   },
   "devDependencies": {
     "babel": "^5.6.5",
